Loading Update To Most Pages & Fixed Footer WhiteSpace

--- a/client/frontend/src/App.css
+++ b/client/frontend/src/App.css
@@ -4,3 +4,27 @@
 html {
     scroll-behavior: smooth;
   }
+  .loader {
+    border: 8px solid #f3f3f3; 
+    border-top: 8px solid black; 
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    animation: spin 1s linear infinite;
+  }
+  
+  /* Animation */
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+  
+  /* Fullscreen Loader */
+  .loader-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; 
+  }
+  
